--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "http-errors": "~1.6.3",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
